--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
 
@@ -11,6 +11,30 @@
     <h2>Realty Group</h2>
 
     <!-- your code here! See README.md for deliverables -->
+
+  <!-- </body>
+</html> --> -->
+
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+
+    <meta charset="UTF-8">
+    <title>Exceptional Realty Group - Luxury Homes - About</title>
+  </head>
+  <body>
+
+    <h1>Exceptional</h1>
+    <h2>Realty Group</h2>
+
+    <video controls autoplay width="600px" height="400px">
+      <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4" type="video/mp4">
+      <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.ogv" type="video/ogg">
+      Your browser does not support HTML5 video.  <a href="https://browsehappy.com/" target="_blank">Please upgrade your browser</a>
+    </video>
 
   </body>
 </html>
